syntax = "proto3";

package ru.otus.protobuf.generated;
option java_multiple_files = true;

message NumberRequest {
    int64 firstVal = 1;
    int64 lastVal = 2;
}

message NumberResponse {
    int64 number = 1;
}

service NumbersService {
    rpc Number(NumberRequest) returns (stream NumberResponse) {};
}
